# ChangeLog for sys-kernel/ccs-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Dec 2009; Naohiro Aota <naota@elisp.net> +ccs-sources-2.6.32.ebuild:
  Version bumped.

  15 Nov 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.31-r3.ebuild,
  +ccs-sources-2.6.31-r4.ebuild:
  Version bumped.

  09 Nov 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.30-r7.ebuild,
  +ccs-sources-2.6.30-r8.ebuild, -ccs-sources-2.6.31-r2.ebuild,
  +ccs-sources-2.6.31-r3.ebuild:
  Version bumped.

  30 Oct 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.31-r1.ebuild,
  +ccs-sources-2.6.31-r2.ebuild:
  Version bumped.

  16 Oct 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.30-r6.ebuild,
  +ccs-sources-2.6.30-r7.ebuild, -ccs-sources-2.6.31.ebuild,
  +ccs-sources-2.6.31-r1.ebuild:
  Version bumped.

  17 Sep 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.16-r1.ebuild,
  +ccs-sources-2.6.16-r2.ebuild, -ccs-sources-2.6.25-r1.ebuild,
  +ccs-sources-2.6.25-r2.ebuild, -ccs-sources-2.6.26-r1.ebuild,
  +ccs-sources-2.6.26-r2.ebuild, -ccs-sources-2.6.27-r2.ebuild,
  +ccs-sources-2.6.27-r3.ebuild, -ccs-sources-2.6.28-r7.ebuild,
  +ccs-sources-2.6.28-r8.ebuild, -ccs-sources-2.6.29-r8.ebuild,
  +ccs-sources-2.6.29-r9.ebuild, -ccs-sources-2.6.30-r5.ebuild,
  +ccs-sources-2.6.30-r6.ebuild, +ccs-sources-2.6.31.ebuild:
  Version bumped.

  03 Sep 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.29-r7.ebuild,
  +ccs-sources-2.6.29-r8.ebuild, -ccs-sources-2.6.30-r4.ebuild,
  +ccs-sources-2.6.30-r5.ebuild:
  Version bumped.

  23 Jul 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.30-r3.ebuild,
  +ccs-sources-2.6.30-r4.ebuild:
  version bumped.

  20 Jul 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.30-r2.ebuild,
  +ccs-sources-2.6.30-r3.ebuild:
  version bumped.

  16 Jul 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.29-r6.ebuild,
  +ccs-sources-2.6.29-r7.ebuild:
  version bumped.
