@@ -1,4 +1,4 @@
-DIST ccs-patch-1.7.0-20090911.tar.gz 815093 RMD160 b4b52c723405b190adee0d80a41b3808d601ad85 SHA1 2fe65690b4e98d477bd1c8332227a6557f2a1119 SHA256 c32745dff190babd97e1f14e303f30aa89249b4ca456e82692c663f50fcb6f1d
+DIST ccs-patch-1.7.1-20091111.tar.gz 821919 RMD160 68fcd231705299e59864ce4caa5867404feb45c5 SHA1 6485758632a81a83d8a3c50924beb3fbec1d0137 SHA256 a6d4e0b688190be9964a4ef1f0cd7ad8b5ca8700754a644726d231ea588783aa
 DIST genpatches-2.6.16-15.base.tar.bz2 98632 RMD160 46e8cfcae8fea262d7599c2e4d3e7fbc8af239b2 SHA1 e0f253ad01a4da388675af4b90223289d9bcd578 SHA256 fb78f2a4d32d1770a34d9ee254686a6a12102fa99c1bb73e9c282ab5f82dddaa
 DIST genpatches-2.6.16-15.extras.tar.bz2 137758 RMD160 4800c6612a3d9f1c2d7f4af923ae5c254416fbcb SHA1 29ed0dd9dc7965b4755048792eee33aea38d5311 SHA256 6ce07f500b9b76a988d2384cb7fd73dda70543f9a6429f5ffea1ea737c534fad
 DIST genpatches-2.6.25-11.base.tar.bz2 137951 RMD160 c8df40098760d8796e653140cbb1df1ec7f42ab7 SHA1 bd94c26d6246279ed53042523de99ebaf13dd6e8 SHA256 a651296c2aa446665211c4e4de304e47f765dc2f21a4b20251ebeeb1cb1b2c83
@@ -26,14 +26,14 @@ DIST linux-2.6.29.tar.bz2 56579370 RMD160 e0e8c0635665ed34618b04fe1140015a4b6ff8
 DIST linux-2.6.30.tar.bz2 59435895 RMD160 72219f992c6266dfe78c6d803d0506c9db1e45b8 SHA1 5fb7f2ccdc59c57887d586971a157bee7af324d1 SHA256 d7b9f19b92fd5c693c16cd62f441d051b699f28ec6a175d1b464e58bacd8c78f
 DIST linux-2.6.31.tar.bz2 61494822 RMD160 c0d88e63740abf0d4f9d82557260a31643f5a01b SHA1 c6e0e6b473ba2b80d164e37cfabf294e783c03d9 SHA256 0acd83f7b85db7ee18c2b0b7505e1ba6fd722c36f49a8870a831c851660e3512
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
-EBUILD ccs-sources-2.6.16-r2.ebuild 1057 RMD160 6701fa8549f88267e8bca15ba3e4bccb1c27bd4f SHA1 9708e259736736560a4aa646ade0bd654112de63 SHA256 7669bb8a6a140a6000bc91159ab37895a18ec2dfee8d7ce3ff5b7579d57c7f66
-EBUILD ccs-sources-2.6.25-r2.ebuild 1057 RMD160 2dcc5ce9db342cc01954ec33238bfeb490b8168f SHA1 3ee81660294e38be20412d47a3e3a78dce4bd53f SHA256 8eecb2aa1053d64feb1999181f9f4872b9e65431c077fbf8feeb2013db145643
-EBUILD ccs-sources-2.6.26-r2.ebuild 1056 RMD160 cb5cbe8e9f894e53e55de708020e097ce2eb707f SHA1 d6a0ee2bcceb833db3190b6903bfa33817a0c183 SHA256 db18af197f1760a37311518ee24b9b0b2a3a2e2eb296434772d8ddd9a7667c57
-EBUILD ccs-sources-2.6.27-r3.ebuild 1057 RMD160 41c858fa3f723a7314bcaad2a0898772ace3bf0a SHA1 29b45350b0346c4512db66f0e5baa507f08582f0 SHA256 40a39ca6e2298651b4b8246764e4177cc9f3a0596e146120b91d1b2c32c836b0
-EBUILD ccs-sources-2.6.28-r8.ebuild 1056 RMD160 9ab302aed3f7b1ade62efda599c6cf52bdf51618 SHA1 db47fb64ee895b86142d62374ea3084cc8409a64 SHA256 8a12cc6e374303ef0ec2dfd39c89534452c26c415504327a98b04fc2ffc76ce9
-EBUILD ccs-sources-2.6.29-r9.ebuild 1056 RMD160 9ab302aed3f7b1ade62efda599c6cf52bdf51618 SHA1 db47fb64ee895b86142d62374ea3084cc8409a64 SHA256 8a12cc6e374303ef0ec2dfd39c89534452c26c415504327a98b04fc2ffc76ce9
-EBUILD ccs-sources-2.6.30-r8.ebuild 1057 RMD160 e008ee79426aa6e888accf3980f287d0867a80a1 SHA1 5427ee3648fb8d8c655262b0ba5b440a03114ae0 SHA256 fa622064ff4f4f0da1e4713ec737fd99d2bf7c832027d0c4e52bc0cac26f659d
-EBUILD ccs-sources-2.6.31-r4.ebuild 1056 RMD160 e89cd038984f9378f6a4b8f91b7ce2853fcce65f SHA1 8623ab198c71bb2d13956b1ca7b16cae877bb8af SHA256 0ab63e0f46780be808beb1dfb9e71fcde5016d80836340a59768279ba5c995b0
-EBUILD ccs-sources-2.6.32.ebuild 1056 RMD160 cebd6868ee2f20cc3505735077144e2f4f0ab33c SHA1 1a9e956e4fa6a14152d7cc975ea3665d04dd8e57 SHA256 b0dff96a48c64ad40d07692d29b2e33362513dd45169641b4f2aedafcc057d77
-MISC ChangeLog 3354 RMD160 f900dd32a1b145628cfa3790e6fd7b51f289ca74 SHA1 bc13e8c37271fe2b29c269ff535399e8c202f6d8 SHA256 5d478ad52b4e5a6a0732c28c12bfd0dd1ea34a111e27b9772a71660edc79eaae
+EBUILD ccs-sources-2.6.16-r3.ebuild 1057 RMD160 fc4423770f7e748f134c9d9201d12f103b314d3e SHA1 b1e083491b09a35d4fe5b0f2bd3374b7befe91c6 SHA256 1df7e550fbced2246fe570ed4a1b0442c50463d188f983dff22c6d4ebeb15325
+EBUILD ccs-sources-2.6.25-r3.ebuild 1057 RMD160 f544c6bd2c5d0b25e539fa26eb0b07dd88ad4d4b SHA1 1db55a2e7830ec7f42c5d4a46496a91cdefa6de0 SHA256 0791ceeac3e849924e82d5ddc39edec33e9d8f1f64dfbf5e65872b20993fe7cc
+EBUILD ccs-sources-2.6.26-r3.ebuild 1056 RMD160 8aaaec861c8390593075f5e998536f75a9e31f50 SHA1 74d800539fda104d95e5d5b32f052be4d93463c9 SHA256 9dff4ef50c6c832a0ae36d9d76fb380b731bd98bdd0d400c49b5afe75754ee2e
+EBUILD ccs-sources-2.6.27-r4.ebuild 1057 RMD160 bb8bb27173602d71d551796be2937993a9eddb32 SHA1 b79b05a441da6f3c5e2dee08c378d6bf44055269 SHA256 5cb3c172293825569a452359f2247a3fcc2e7a7abdfb9d8ef55488ba33878ceb
+EBUILD ccs-sources-2.6.28-r9.ebuild 1056 RMD160 b04b18a16fde6ebb71a93badfc4b80cbeceb0497 SHA1 80cf837f19efb36614fc31fb4f0c41f96f8373c2 SHA256 58cd8e48645ddb6c78e312a1af0f7fa2e4935b2a35771b317e02cf7129263314
+EBUILD ccs-sources-2.6.29-r10.ebuild 1056 RMD160 b04b18a16fde6ebb71a93badfc4b80cbeceb0497 SHA1 80cf837f19efb36614fc31fb4f0c41f96f8373c2 SHA256 58cd8e48645ddb6c78e312a1af0f7fa2e4935b2a35771b317e02cf7129263314
+EBUILD ccs-sources-2.6.30-r9.ebuild 1057 RMD160 ad01460014c13134a18d511ab08b068731fc57c6 SHA1 4271b2f3e69d7147f9406b4ea77fc7d1e2bfa3e7 SHA256 72680b0cafd4cf193ab04de138111d2342af26ea7538169c516ad804cf3a7365
+EBUILD ccs-sources-2.6.31-r5.ebuild 1056 RMD160 ba290ac0ea85421a6268b1d533c802e28727a5c1 SHA1 c7d6dc196ea08f00b3987076c9bd3a64a0117bee SHA256 d5c285c734c3da7e2d218ce46a049e2e847bb09352517aa87ed7e6838b3e08b1
+EBUILD ccs-sources-2.6.32-r1.ebuild 1056 RMD160 82b26bd1a7dbf32707f340ec8ca4f45ab2d7cc4d SHA1 ff58588bf5cf3b529fd9a1205afb70cdfcf6f653 SHA256 6e71a30b3e129225a671ec3eb23d6db1b9cd853807d6269775e15116e6681705
+MISC ChangeLog 4003 RMD160 8ff2dd650313a79c184484b91ccdd7aaae5d9a45 SHA1 ffe9ddf818cc066be6563dec0cc351a26019f66d SHA256 875afa23cc4437ff22c98786205843e065184b0bcd5ef268319ef29dba587d6c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
