@@ -4,13 +4,13 @@
 
 ETYPE="sources"
 K_WANT_GENPATCHES="base extras"
-K_GENPATCHES_VER="11"
+K_GENPATCHES_VER="15"
 
 inherit eutils kernel-2
 detect_version
 detect_arch
 
-CCS_TGP="ccs-patch-1.7.0-20090911"
+CCS_TGP="ccs-patch-1.7.1-20091111"
 CCS_TGP_SRC="mirror://sourceforge.jp/tomoyo/43375/${CCS_TGP}.tar.gz"
 
 DESCRIPTION="TOMOYO Linux sources for the ${KV_MAJOR}.${KV_MINOR} kernel tree"
